--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 </head>
 <body>
     <section>
+        <h1 class="motivation-text"></h1>
+        <div class="counter-text">
+
+        </div>
         <div class="button-group">
+            
         </div>
     </section>
     <script src="assets/js/index.js"></script>
