--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <section>
         <h1 class="motivation-text"></h1>
         <div class="counter-text">
-
+          
         </div>
         <div class="button-group">
-            
+            <h1 class="best-score">Best Score: </h1>
         </div>
     </section>
     <script src="assets/js/index.js"></script>
