Added localStorage to User's Best Score

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 </head>
 <body>
     <section>
-        <h1 class="motivation-text"></h1>
+        
         <div class="counter-text">
           
         </div>
         <div class="button-group">
-            <h1 class="best-score">Best Score: </h1>
+            <h1 class="best-score">User's Best Score: </h1>
         </div>
     </section>
     <script src="assets/js/index.js"></script>
