Refactoring JavaScript File & Add footer section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter++</title>
+    <!--FAVICON-->
+    <link rel="shortcut icon" href="assets/img/C++.ico" type="image/x-icon">
     <!--CSS-->
     <link rel="stylesheet" href="assets/css/style.css">
     <!--GOOGLE FONTS-->
@@ -14,14 +16,16 @@
 </head>
 <body>
     <section>
-        
-        <div class="counter-text">
-          
+        <div class="counter-section">
+          <h1 class="counter-text">User's Score:</h1>
         </div>
         <div class="button-group">
             <h1 class="best-score">User's Best Score: </h1>
         </div>
     </section>
+    <footer id="footer">
+        <h2>Created with 💖 by <a href="https://n0tics00.github.io/Start2Impact_HTML_CSS/">Paolo D'Agostino</a></h2>
+    </footer>
     <script src="assets/js/index.js"></script>
 </body>
 </html>
